<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/sisfo"
        android:layout_width="384dp"
        android:layout_height="72dp"
        android:layout_marginTop="50dp"
        android:text="@string/sisfo"
        android:textAlignment="center"
        android:textColor="@color/hitam"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tekber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/tekber"
        android:textColor="@color/hitam"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/komponen1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/oval"
        android:text="@string/komponen1"
        app:layout_constraintEnd_toStartOf="@+id/komponen2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/komponen2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/oval"
        android:text="@string/komponen2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/komponen3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/oval"
        android:text="@string/komponen3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/komponen4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen1" />

    <Button
        android:id="@+id/komponen4"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/oval"
        android:text="@string/komponen4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen2" />

    <Button
        android:id="@+id/komponen5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:background="@color/putih"
        android:text="@string/komponen5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>