<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".Syntax3">




    <TextView
        android:id="@+id/aktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/syntax3"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/isi1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="9dp"
                android:layout_marginStart="9dp"
                android:text="@string/scroll"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/penerimasiaran"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reciever1"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="20dp"
                />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/kembali1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/putih"
        android:text="@string/menu"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>